--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
