--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "query-string": "^9.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0"
   },
