--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
