--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "js-base64": "^3.7.7",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
