--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-base64": "^3.7.7",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
+    "mapbox-gl": "^3.14.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "query-string": "^9.2.0",
