--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.1.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
@@ -17,6 +18,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "js-base64": "^3.7.7",
+    "keyv": "^4.5.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.14.0",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
